Gå tilbake til .collect(Collectors.toList())
Siden vi trenger mutable liste